# pybelikov

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/pybelikov/: __init__.py  core.py
tests/: test_core.py
