[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybelikov"
version = "0.1.0"
description = "Highly efficient computation of fully normalized associated Legendre functions using the Belikov algorithm."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Bennett Kellmayer", email = "kellmayer.1@osu.edu"},
]
keywords = [
    "geodesy", 
    "legendre", 
    "associated-legendre-functions", 
    "normalization", 
    "spherical-harmonics", 
    "belikov", 
    "gravity-field"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 1. Runtime Dependencies (Required for the code to run)
dependencies = [
    "numpy>=1.21.0",
    "numba>=0.56.0",
]

# 2. Optional / Development Dependencies (Only for testing)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/bkellmayer6/pybelikov"
"Bug Tracker" = "https://github.com/bkellmayer6/pybelikov/issues"